<resources>
    <string name="app_name">My Koin Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="exercise_list_fragment_label">Exercise List Fragment</string>
    <string name="workout_list_fragment_label">Workouts</string>
    <string name="workout_details_fragment_label">Workout Details</string>
    <string name="workout_session_fragment_label">Workout Session</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="go_to_exercises">Go to Exercises</string>
    <string name="go_to_workouts">Go to Workouts</string>
    <string name="go_to_plans">Go to Plans</string>
    <string name="add_exercise_fragment_label">Add Exercise</string>

    <string name="server_client_id">478137234674-754tovm8mavjbd649e6amt2d7d42tgo8.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="workout_name_workout_details_fragment">Workout Name</string>
    <string name="workout_description_workout_details_fragment">Workout Details</string>
    <string name="start_workout_workout_details_fragment">Start</string>
</resources>
