<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <Button
        android:id="@+id/navigateToExercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_exercises"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/navigateToWorkouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_workouts"
        app:layout_constraintTop_toBottomOf="@id/navigateToExercises"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/navigateToPlans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_plans"
        app:layout_constraintTop_toBottomOf="@+id/navigateToWorkouts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
