<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="dk.fitfit.mykoinapplication.ui.HomeFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_FirstFragment_to_ExerciseListFragment"
            app:destination="@id/ExerciseListFragment" />
    </fragment>
    <fragment
        android:id="@+id/AddExerciseFragment"
        android:name="dk.fitfit.mykoinapplication.ui.AddEditExerciseFragment"
        android:label="@string/add_exercise_fragment_label"
        tools:layout="@layout/fragment_addeddit_exercise">
        <action
            android:id="@+id/action_AddExerciseFragment_to_ExerciseListFragment"
            app:destination="@id/ExerciseListFragment" />
    </fragment>
    <fragment
        android:id="@+id/ExerciseListFragment"
        android:name="dk.fitfit.mykoinapplication.ui.ExerciseListFragment"
        android:label="@string/exercise_list_fragment_label"
        tools:layout="@layout/fragment_exercise_list">
        <action
            android:id="@+id/action_ExerciseListFragment_to_AddExerciseFragment"
            app:destination="@id/AddExerciseFragment" />
    </fragment>
</navigation>
